another one bug fixes